@@ -2,20 +2,20 @@ package com.jameswu.demo.model.enums;
 
 import static com.jameswu.demo.utils.GzTexts.ROLE_PREFIX;
 
+import com.google.common.collect.ImmutableSet;
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.Getter;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 @Getter
 public enum UserRole {
-	USER(Set.of(Permission.READ_PRIVILEGE)),
-	ADMIN(Set.of(Permission.READ_PRIVILEGE, Permission.WRITE_PRIVILEGE));
+	USER(ImmutableSet.of(Permission.READ_PRIVILEGE)),
+	ADMIN(ImmutableSet.of(Permission.READ_PRIVILEGE, Permission.WRITE_PRIVILEGE));
 
-	private final Set<Permission> permissions;
+	private final ImmutableSet<Permission> permissions;
 
-	UserRole(Set<Permission> authorities) {
+	UserRole(ImmutableSet<Permission> authorities) {
 		this.permissions = authorities;
 	}
 
